--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -27,12 +27,23 @@ background:#ffffff;
     background: #ffffff;
     display: inline-block;
     margin-top: 30px;
+    padding-bottom: 10px;
+    border: 1px solid #cccccc;
+}
+
+.social h2{
+border-bottom: 2px solid #cccccc;
+text-align: center;
+}
+
+social a{
+    border-style: none;
 
 }
 .work{
     margin-bottom: 50px;
 }
-.footer {
+footer {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -43,6 +54,5 @@ background:#ffffff;
     padding: 30px 0;
     font-size: 12px;
     color: #ccc;
-    text-align: center;
   }
   
