--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -9,12 +9,31 @@ body{
     background-image: url('../images/tree_bark.png');
     height: 100%;
 }
+
 .header{ 
 background:#ffffff;
  border-bottom: 3px solid #cccccc;
 }
+
+.content{
+background-color: #ffffff;
+padding: 10px;
+margin-top: 30px;
+}
+.about{
+    background: #ffffff;
+    border-bottom: 2px solid #cccccc;
+    color:#4aaaa5;
+}
+h1{
+    padding-left:20px;
+    width: 200px;
+    height: auto;
+    background-color:#4aaaa5;
+    color: #ffffff;;
+}
 .nav{
-    padding-left: 15px;
+    padding-right: 15px;
     margin-left: 15px;
     line-height: 18px;
     color: #999;
@@ -34,6 +53,8 @@ background:#ffffff;
 .social h2{
 border-bottom: 2px solid #cccccc;
 text-align: center;
+color: #4aaaa5;;
+font-size: 22px;
 }
 
 social a{
@@ -42,10 +63,15 @@ social a{
 }
 .work{
     margin-bottom: 50px;
+    margin-top: 30px;
+    background-color: #ffffff;
 }
-footer {
+
+content{
+    background-color: #ffffff;
+}
+.footer {
     position: absolute;
-    bottom: 0;
     width: 100%;
     height: 80px;
     background: #666666;
@@ -54,5 +80,18 @@ footer {
     padding: 30px 0;
     font-size: 12px;
     color: #ccc;
+    bottom: 0;
+  }
+  .footer2{
+   position: relative;
+   width: 100%;
+   height: 80px;
+   background: #666666;
+   border-top: 8px solid #4aaaa5;
+   text-align: center;
+   padding: 30px 0;
+   font-size: 12px;
+   color: #ccc;
+   bottom: 0;
   }
   
